# Rash-Driving-Detection-using-mobile-IOT-Sensors

./: README.md  Rash_Prediction_LSTM_Model.ipynb  final_code_rash_detection.ipynb  ml.py
rashserver/: imu_data(Rash).csv  imu_data.csv  index.html  main.py  predict.py  pyproject.toml
rashserver/model/: imu_scaler.pkl  rash_detection_lstm.h5
