[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "cors==1.0.1",
    "flask>=3.1.2",
    "joblib==1.4.2",
    "matplotlib==3.9.3",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pyright==1.1.390",
]
